Init DBConnection Str

--- a/xs0910.IdentityServer4/appsettings.json
+++ b/xs0910.IdentityServer4/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IsMySql": true,
+    "Connection_MySql": "server=127.0.0.1;database=IdsDB;uid=root;pwd=123456;pooling=true;minimumpoolsize=5;Maximumpoolsize=300;",
+    "Connection_MSSql": "server=127.0.0.1;Database=IdsDB;User ID=sa;Password=123456;Trusted_Connection=false;",
+    "Connection_File": "D:\\Appsettings\\xs0910.IdentityServer4.txt" // 如果当前文件存在，直接读取文件的字符串
+  }
 }
