--- a/xs0910.IdentityServer4/xs0910.IdentityServer4.csproj
+++ b/xs0910.IdentityServer4/xs0910.IdentityServer4.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
@@ -21,7 +22,6 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
-    <Folder Include="Data\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
