--- a/xs0910.IdentityServer4/xs0910.IdentityServer4.csproj
+++ b/xs0910.IdentityServer4/xs0910.IdentityServer4.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,5 +33,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logs\" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://beaujs.com/schema.json" /></VisualStudio></ProjectExtensions>
 
 </Project>
